//
//  CarroUITests.swift
//  CarroUITests
//
//  Created by MAC on 2020/12/3.
//

import XCTest

@testable import Carro

class CarroUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
    
    func testDisplay() throws {
        
        let app = XCUIApplication()
        let detail = app.navigationBars["Main"].buttons["Detail"]
        detail.tap()
        
        app.buttons["Singapore"].tap()
        app.scrollViews.children(matching: .other).element(boundBy: 1).swipeUp()
        app.swipeDown()
        
        let backButton = app.navigationBars.children(matching: .button).element
        backButton.tap()
        
        detail.tap()
        
        app.buttons["Thailand"].tap()
        
        app.swipeUp()
    }

}
